--- a/src/Movies_for_you/pjt.html
+++ b/src/Movies_for_you/pjt.html
@@ -10,17 +10,17 @@
     <h1>Movies for you</h1>
     <h3>The best Movie DB</h3>
     <form>
-      <div>
+      <div class="box-input flex">
         <input type="text" name="inputSearch" id="inputSearch" />
         <input type="button" value="SEARCH" id="btnSearch" />
       </div>
-      <div>
+      <div class="box-btn flex">
         <input type="button" value="YEAR UP" id="btnYearUp" />
         <input type="button" value="YEAR DOWN" id="btnYearDown" />
         <input type="button" value="BEST RATE" id="btnBestRate" />
       </div>
     </form>
-    <ul id="showResult"></ul>
+    <section id="showResult"></section>
     <script type="module" src="./pjt.ts"></script>
   </body>
 </html>
