add function added

--- a/src/Movies_for_you/pjt.html
+++ b/src/Movies_for_you/pjt.html
@@ -14,6 +14,53 @@
         <input type="text" name="inputSearch" id="inputSearch" />
         <input type="button" value="SEARCH" id="btnSearch" />
       </div>
+      <fieldset>
+        <legend>Add a Film</legend>
+        <input
+          type="text"
+          name="inputTitle"
+          id="inputTitle"
+          placeholder="Title"
+          required
+        />
+        <input
+          type="text"
+          name="inputYear"
+          id="inputYear"
+          placeholder="Year"
+          required
+        />
+        <input
+          type="text"
+          name="inputDirector"
+          id="inputDirector"
+          placeholder="Director"
+          required
+        />
+        <input
+          type="text"
+          name="inputRuntime"
+          id="inputRuntime"
+          placeholder="Runtime (e.g. 2h 55min)"
+          required
+        />
+        <input
+          type="text"
+          name="inputGenre"
+          id="inputGenre"
+          placeholder="Genre, Genre, ..."
+          required
+        />
+        <input
+          type="text"
+          name="inputRate"
+          id="inputRate"
+          placeholder="Rate (e.g. 9.0)"
+          required
+        />
+
+        <input type="button" value="ADD" id="btnAdd" />
+      </fieldset>
       <div class="box-btn flex">
         <input type="button" value="YEAR UP" id="btnYearUp" />
         <input type="button" value="YEAR DOWN" id="btnYearDown" />
